# linkpedant-for-discord

./: .dockerignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  config.example.yaml  deny.toml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: build.yml  check.yml  docker.yml  general.yml  pr.yml  release.yml
docs/: PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
locales/: app.yml
src/: config.rs  lib.rs  main.rs
src/client/: mod.rs
src/commands/: mod.rs
src/http/: health.rs  mod.rs
src/replace/: amazon.rs  base.rs  bsky.rs  instagram.rs  mod.rs  pixiv.rs  reddit.rs  reddit_media.rs  tiktok.rs  twitter.rs  youtube.rs
src/util/: mod.rs  test.rs
