[package]
name = "linkpedant-for-discord"
version = "0.4.6"
edition = "2021"

[lib]
name = "linkpedant"
path = "src/lib.rs"

[[bin]]
name = "linkpedant"
path = "src/main.rs"

[dependencies]
config = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
thiserror = "2"
serenity = { version = "0.12", features = ["client", "gateway", "builder", "framework", "interactions_endpoint", "model"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-i18n = "3"
serde = { version = "1", features = ["derive"]}
fancy-regex = "0.14"
url = "2"
urlencoding = "2"
strum = { version = "0.27", features = ["derive"] }
once_cell = "1"
actix-web = "4"
atomic_enum = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
